# auto-trading-system

./: .gitignore  Dockerfile  FINMIND_SETUP.md  README.md  Todo.md  config.yaml  deploy_to_vm.sh  docker-compose-simple.yml  docker-compose.yml  docker_start.sh  main.py  pyproject.toml  restart_trading_system.sh  test_2330_4h_kline.py  test_complete_system.py  test_fubon_login_detailed.py  test_independent_modules.py  test_new_strategies.py  test_simple.py  test_strategies_quick.py
docs/api/: FINMIND_INTEGRATION_README.md
docs/deployment/: DOCKER_DEPLOYMENT.md
docs/development/: PROJECT_STRUCTURE.md  QUICK_START.md  VISUALIZATION_README.md
docs/trading/: AUTO_TRADING_GUIDE.md  FUBON_INTEGRATION_SUMMARY.md  FUBON_SDK_SETUP.md  PRE_MARKET_ANALYSIS_GUIDE.md
log/: client.log.20250904  client.log.20250907  notify.log.20250903  notify.log.20250904  notify.log.20250907  program.log.20250903  program.log.20250904
scripts/data_migration/: calculate_indicators.py  data_migrate.py  debug_finmind_api.py  sync_daily_data.py
scripts/deployment/: deploy.sh  install_docker.sh
scripts/setup/: configure_pgadmin.py  init_database.py  start_db.sh  stop_db.sh
scripts/testing/: run_tests.py  test_blue_long_strategy.py  test_blue_short_strategy.py  test_data_generator.py  test_db_connection.py  test_finmind_fetcher.py  test_pre_market_analyzer.py  test_technical_indicators.py
scripts/trading/: run_auto_trading.py  run_pre_market_analysis.py  test_auto_trading.py  test_complete_flow.py  test_fubon_api.py  test_market_data.py  test_pre_market_orders.py
src/: __init__.py
src/modules/: __init__.py
(+34 files in other folders)
